--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -8,21 +8,24 @@ authors:
   - name: Caitlin Rasbid
     affiliation: Colorado State University
     corresponding: false
+execute: 
+  echo: true
 bibliography: references.bib
 csl: apa-6th-edition.csl
 ---
 
 ## Background
-
 The issue of climate change has caused regime alterations across aspects of ecosystems, impacting ecosystems functioning and environmental services we utilize. Especially in the Western US, we rely on snowpack that accumulates during the winter to provide water for the drier months of the year, which means that decreased snowpack results in scarcity. Globally, snowpack substantially contributes to the livelihoods of over a billion people, who are both directly and indirectly dependent on meltwater resources. (@irannezhad2022snowpack) Decreased annual snowpack can have adverse impacts on fire conditions, making wildfires that start more dangerous and difficult to control. Reduced meltwater, soil moisture, and fuel moisture can greatly increase fire potential in forest systems, which we have already begun to see across the West. (@Gergel2017-vr) These factors increase the need for snowpack monitoring so urban populations are able to recognize when droughts are likely to occur and when fire risk is higher than average.
 
 ## Data
-The Snow Telemetry Network, or SNOTEL, We will utilize SNOTEL data from the six sites located in Rocky Mountain National Park, pulling data on average snow water equivalent recorded, average snow depth, average snow temperature, (soil temperature observed?) and mean air temperature. The six sites we plan to analyze located within RMNP are Phantom Valley, Lake Irene, Willow Park, Bear Lake, Copeland Lake, and Wild Basin. Using the SNOTEL data, we can extract daily records for each of the variables at each of the six sites in RMNP over a 25 year period, allowing us to observe changes from the first quarter of the 21st century. 
+The Snow Telemetry Network, or SNOTEL, collects snowpack and other water supply data across the US to support resource managemnt initiatives. We will utilize SNOTEL data from the six sites located in Rocky Mountain National Park, pulling data on average snow water equivalent recorded, average snow depth, average snow temperature, (soil temperature observed?) and mean air temperature. The six sites we plan to analyze located within RMNP are Phantom Valley, Lake Irene, Willow Park, Bear Lake, Copeland Lake, and Wild Basin. Using the SNOTEL data, we can extract daily records for each of the variables at each of the six sites in RMNP over a 25 year period, allowing us to observe changes from the first quarter of the 21st century. 
 
 ## Methods
 Before conducting statistical tests, we plan to model these variables visually through graphs which will help us draw initial conclusions on overall trends in the data. We plan to utilize multiple linear regression modeling to see if there is a relationship or impact on annual snowpack with the variables we want to analyze. Multiple linear regression modeling would allow us to compare multiple independent variables for their impact on our dependent variable (annual snowpack), highlighting which variables are statistically significant.  as well as ANOVA testing to visualize variance between the variables that contribute to snowpack. 
 
 ## Exploring Our Data
+We will filter the dataset to only include entries from the past 25 years at the six sites of interest in RMNP,  Phantom Valley, Lake Irene, Willow Park, Bear Lake, Copeland Lake, and Wild Basin. We will then filter out any variables that are not being assessed for relationship to annual snowpack, and create annual aggregate variables from average snow water equivalent recorded, average snow depth, average snow temperature, and mean air temperature to simplify the daily data into an annual average that will aid in assessing trends over many years. We will be doing this according to a snow year, with a year being from October-September.
+
 ```{r}
 library(readr)
 install.packages("janitor", repos = "https://cloud.r-project.org")
@@ -51,6 +54,7 @@ swe_data <- swe_data %>%
   mutate(swe = as.numeric(swe))
 
 annual_swe <- swe_data %>%
+  filter(year < 2025) %>%
   group_by(year) %>%
   summarise(avg_swe = mean(swe, na.rm = TRUE))
 
@@ -73,6 +77,7 @@ temp_data <- df %>%
   mutate(temp = as.numeric(temp))
 
 annual_temp <- temp_data %>%
+  filter(year < 2025) %>%
   group_by(year) %>%
   summarise(avg_temp = mean(temp, na.rm = TRUE))
 
