--- a/docs/index.out.ipynb
+++ b/docs/index.out.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ESS330 Project Intro & Methods\n",
+    "# Change in RMNP Average Snowpack with Annual Temperatures\n",
     "\n",
     "Caleb Cripe (Colorado State University)  \n",
     "Caitlin Rasbid (Colorado State University)\n",
@@ -25,7 +25,7 @@
     "\n",
     "We will filter the dataset to only include entries from the past 25 years at the six sites of interest in RMNP, Phantom Valley, Lake Irene, Willow Park, Bear Lake, Copeland Lake, and Wild Basin. We will then filter out any variables that are not being assessed for relationship to annual snowpack, and create annual aggregate variables from average snow water equivalent recorded, average snow depth, average snow temperature, and mean air temperature to simplify the daily data into an annual average that will aid in assessing trends over many years. We will be doing this according to a snow year, with a year being from October-September."
    ],
-   "id": "70076c30-81b5-4cd0-b985-19bf6235f80d"
+   "id": "683e15ab-0753-453e-9982-a660be94a8b6"
   },
   {
    "cell_type": "code",
@@ -38,7 +38,7 @@
      "text": [
       "\n",
       "The downloaded binary packages are in\n",
-      "    /var/folders/jn/hk4fnzlx679cs3m0_lnzh7hh0000gn/T//RtmpwbsZKj/downloaded_packages"
+      "    /var/folders/jn/hk4fnzlx679cs3m0_lnzh7hh0000gn/T//Rtmp3liJjn/downloaded_packages"
      ]
     },
     {
@@ -83,7 +83,7 @@
     "library(readr)\n",
     "install.packages(\"janitor\", repos = \"https://cloud.r-project.org\")"
    ],
-   "id": "457722c8-d7a5-48cc-b2d4-938ceeeb8254"
+   "id": "7ac99c61-76ef-48ab-b3ab-434e0acf86dd"
   },
   {
    "cell_type": "code",
@@ -116,7 +116,7 @@
    "source": [
     "library(tidyverse)"
    ],
-   "id": "76350fc7-55a0-4362-a4eb-0d71d97c2a33"
+   "id": "47f50878-aa87-4d01-ae24-f18257b79b64"
   },
   {
    "cell_type": "code",
@@ -153,7 +153,7 @@
     "       x = \"Year\", y = \"Avg Temp (°F)\") +\n",
     "  theme_bw()"
    ],
-   "id": "953dfd63-728d-4319-b7a5-8782f454e4f2"
+   "id": "b58ed022-b0b8-4a38-8a97-9fb8dd97c1ff"
   },
   {
    "cell_type": "markdown",
@@ -171,7 +171,7 @@
     "\n",
     "Irannezhad, M., Ronkanen, A.-K., & Malekian, A. (2022). Editorial: Climate impacts on snowpack dynamics. *Frontiers in Earth Science*, *10*. <https://doi.org/10.3389/feart.2022.970981>"
    ],
-   "id": "94bb436c-6cf7-48fd-8bb5-26ff28ca85ac"
+   "id": "f4363df8-bcfd-4f28-9a1f-f279ac432180"
   }
  ],
  "nbformat": 4,
